[package]
name = "seance"
version = "0.7.0"
description = "A session library"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/seance"
repository = "https://github.com/rossnomann/seance"

[features]
redis-backend = ["redis"]
fs-backend = ["tokio/fs"]

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
log = "0.4"
redis = { version = "0.22", features = ["tokio-comp"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.24", default-features = false, features = ["sync", "time", "macros", "rt-multi-thread"] }

[[test]]
name = "fs"
required-features = ["fs-backend"]

[[test]]
name = "redis"
required-features = ["redis-backend"]
